--- a/src/pages/chatpage/ChatPage.css
+++ b/src/pages/chatpage/ChatPage.css
@@ -1,37 +1,32 @@
-body {
-  /* background-color: #93aad4; */
-  margin: 0;
-  padding: 0;
-}
-
-.header {
-  background-color: #222a41;
-  color: white;
-  height: 75px;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
+.msgs {
+  margin: 110px 0;
   display: flex;
-  align-items: center;
-  justify-content: space-around;
+  flex-direction: column;
 }
 
-img {
+.chat-page {
+  /* border: solid black; */
+  width: 100%;
+  margin: 0 auto;
+  max-width: 500px;
+  align-items: center;
+  background-color: #fff;
+  height: 100%vh;
+  min-height: 91vh;
+}
+
+.user-icon {
   border-radius: 50%;
   height: 45px;
-  margin-top: -20px;
   border: 2px solid black;
 }
 
-p {
+.text-message {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 500;
   font-size: 25px;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin: 10px;
   overflow-wrap: break-word;
 }
 
@@ -45,7 +40,7 @@ p {
 }
 
 .sent {
-  background-color: #85e14b;
+  background-color: #ffd341;
   color: black;
   border-top-right-radius: 500px;
   flex-direction: row-reverse;
@@ -65,20 +60,15 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: 89%;
+  max-width: 480px;
   bottom: 0;
   z-index: 1;
   border-top: 1px solid lightgray;
-  margin-left: -5px;
+  margin: 0 auto;
   padding: 10px;
   padding-bottom: 20px;
   background-color: #fafafa;
-}
-
-.msgs {
-  margin: 110px 0;
-  display: flex;
-  flex-direction: column;
 }
 
 @media (max-width: 775px) {
