--- a/src/pages/chatpage/ChatPage.css
+++ b/src/pages/chatpage/ChatPage.css
@@ -1,5 +1,5 @@
-body {
-  /* background-color: #93aad4; */
+/* body {
+  background-color: #93aad4;
   margin: 0;
   padding: 0;
 }
@@ -111,4 +111,4 @@ p {
     height: 30px;
     margin-top: -7px;
   }
-}
+} */
